--- a/advisory/fiduciary.html
+++ b/advisory/fiduciary.html
@@ -162,7 +162,6 @@ Please do send me an email, which is mentioned at the top of this web page. Intr
 
 ###  Compliance Information
 
----
 
 **Annexure A**
 
@@ -194,40 +193,40 @@ Mission: Every investor should be able to invest in right investment products ba
 •	To provide investment advice to the client based on the risk-profiling of the clients and suitability of the client.
 
 **D. Details of grievance redressal mechanism and how to access it**
-i.	In case of any grievance / complaint, an investor should approach the concerned Investment Adviser and shall ensure that the grievance is resolved within 30 days.
-ii.	If the investor’s complaint is not redressed satisfactorily, one may lodge a complaint with SEBI on SEBI’s 'SCORES' portal which is a centralized web based complaints redressal system. SEBI takes up the complaints registered via SCORES with the concerned intermediary for timely redressal. SCORES facilitates tracking the status of the complaint.
-iii.	With regard to physical complaints, investors may send their complaints to: Office of Investor Assistance and Education, Securities and Exchange Board of India, SEBI Bhavan, Plot No. C4-A, ‘G’ Block, Bandra-Kurla Complex, Bandra (E), Mumbai - 400 051.
+•	In case of any grievance / complaint, an investor should approach the concerned Investment Adviser and shall ensure that the grievance is resolved within 30 days.
+•	If the investor’s complaint is not redressed satisfactorily, one may lodge a complaint with SEBI on SEBI’s 'SCORES' portal which is a centralized web based complaints redressal system. SEBI takes up the complaints registered via SCORES with the concerned intermediary for timely redressal. SCORES facilitates tracking the status of the complaint.
+•	With regard to physical complaints, investors may send their complaints to: Office of Investor Assistance and Education, Securities and Exchange Board of India, SEBI Bhavan, Plot No. C4-A, ‘G’ Block, Bandra-Kurla Complex, Bandra (E), Mumbai - 400 051.
 
 **E. Expectations from the investors (Responsibilities of investors)**
-_Do's_
-i.	Always deal with SEBI registered Investment Advisers.
-ii.	Ensure that the Investment Adviser has a valid registration certificate.
-iii.	Check for SEBI registration number. Please refer to the list of all SEBI registered Investment Advisers which is available on SEBI website in the following link: https://www.sebi.gov.in/sebiweb/other/OtherAction.do?doRecognisedFpi=yes&intmId=13)
-iv.	Pay only advisory fees to your Investment Adviser. Make payments of advisory fees through banking channels only and maintain duly signed receipts mentioning the details of your payments.
-v.	Always ask for your risk profiling before accepting investment advice. Insist that Investment Adviser provides advisory strictly on the basis of your risk profiling and take into account available investment alternatives.
-vi.	Ask all relevant questions and clear your doubts with your Investment Adviser before acting on advice.
-vii.	Assess the risk–return profile of the investment as well as the liquidity and safety aspects before making investments.
-viii.	Insist on getting the terms and conditions in writing duly signed and stamped. Read these terms and conditions carefully particularly regarding advisory fees, advisory plans, category of recommendations etc. before dealing with any Investment Adviser.
-ix.	Be vigilant in your transactions.
-x.	Approach the appropriate authorities for redressal of your doubts / grievances.
-xi.	Inform SEBI about Investment Advisers offering assured or guaranteed returns.
+<i>Do's</i>
+•	Always deal with SEBI registered Investment Advisers.
+•	Ensure that the Investment Adviser has a valid registration certificate.
+•	Check for SEBI registration number. Please refer to the list of all SEBI registered Investment Advisers which is available on SEBI website in the following link: https://www.sebi.gov.in/sebiweb/other/OtherAction.do?doRecognisedFpi=yes&intmId=13)
+•.	Pay only advisory fees to your Investment Adviser. Make payments of advisory fees through banking channels only and maintain duly signed receipts mentioning the details of your payments.
+•	Always ask for your risk profiling before accepting investment advice. Insist that Investment Adviser provides advisory strictly on the basis of your risk profiling and take into account available investment alternatives.
+•	Ask all relevant questions and clear your doubts with your Investment Adviser before acting on advice.
+•	Assess the risk–return profile of the investment as well as the liquidity and safety aspects before making investments.
+•	Insist on getting the terms and conditions in writing duly signed and stamped. Read these terms and conditions carefully particularly regarding advisory fees, advisory plans, category of recommendations etc. before dealing with any Investment Adviser.
+•	Be vigilant in your transactions.
+•	Approach the appropriate authorities for redressal of your doubts / grievances.
+•	Inform SEBI about Investment Advisers offering assured or guaranteed returns.
 
-_Don'ts_
-xii.	Don’t fall for stock tips offered under the pretext of investment advice.
-xiii.	Do not provide funds for investment to the Investment Adviser.
-xiv.	Don’t fall for the promise of indicative or exorbitant or assured returns by the Investment Advisers. Don’t let greed overcome rational investment decisions.
-xv.	Don’t fall prey to luring advertisements or market rumors.
-xvi.	Avoid doing transactions only on the basis of phone calls or messages from any Investment adviser or its representatives.
-xvii.	Don’t take decisions just because of repeated messages and calls by Investment Advisers.
-xviii.	Do not fall prey to limited period discount or other incentive, gifts, etc. offered by Investment advisers.
-xix.	Don’t rush into making investments that do not match your risk taking appetite and investment goals.
-xx.	Do not share login credential and password of your trading and demat accounts with the Investment Adviser.
+<i>Don'ts</i>
+•	Don’t fall for stock tips offered under the pretext of investment advice.
+•	Do not provide funds for investment to the Investment Adviser.
+•	Don’t fall for the promise of indicative or exorbitant or assured returns by the Investment Advisers. Don’t let greed overcome rational investment decisions.
+•	Don’t fall prey to luring advertisements or market rumors.
+•	Avoid doing transactions only on the basis of phone calls or messages from any Investment adviser or its representatives.
+•	Don’t take decisions just because of repeated messages and calls by Investment Advisers.
+•	Do not fall prey to limited period discount or other incentive, gifts, etc. offered by Investment advisers.
+•	Don’t rush into making investments that do not match your risk taking appetite and investment goals.
+•	Do not share login credential and password of your trading and demat accounts with the Investment Adviser.
 
 ---
 
-** Annexure B **
+**Annexure B**
 
-_Month Ending: December 2021_
+<i>Month Ending: December 2021</i>
 
 |Received From|Pending at end of last month|Received|Resolved|Total Pending|Pending > 3 months|Average Resolution time (days)|
 |:---:|:---:|:---:|:---:|:---:|:---:|:---:|
@@ -236,7 +235,7 @@ _Month Ending: December 2021_
 |Other Sources|0|0|0|0|NA|NA|
 |Grand Total|0|0|0|0|NA|NA|
 
-_Trend of monthly disposal of Complaints_
+<i>Trend of monthly disposal of Complaints</i>
 |Month|Carried Forward from previous month|Received|Cummulative|Total Pending|
 |:---:|:---:|:---:|:---:|:---:|
 |April 2021|0|0|0|0|
@@ -249,7 +248,7 @@ _Trend of monthly disposal of Complaints_
 |November 2021|0|0|0|0|
 |December 2021|0|0|0|0|
 
-_Trend of annual disposal of complaints_
+<i>Trend of annual disposal of complaints</i>
 |Year|Carried Forward from previous month|Received|Cummulative|Total Pending|
 |:---:|:---:|:---:|:---:|:---:|
 |FY 2018-19|0|0|0|0|
@@ -258,7 +257,7 @@ _Trend of annual disposal of complaints_
 
 ---
 
-** Annexure C **
+**Annexure C**
 
 Client’s queries / complaints may arise due to lack of understanding or a deficiency of service experienced by clients. Deficiency of service may include lack of explanation, clarifications, understanding which escalates into shortfalls in the expected delivery standards, either due to inadequacy of facilities available or through the attitude of staff towards client.
 
@@ -267,6 +266,23 @@ Client’s queries / complaints may arise due to lack of understanding or a defi
 3.	Clients can write to the Investment Adviser at <b>INFO <i>[at]</i> PANTHERACAPITAL <i>[dot]</i> IN</b>, if the Investor does not receive a response within 10 business days of writing to the Client Servicing Team. The client can expect a reply within 10 business days of approaching the Investment Advisor.
 4.	In case you are not satisfied with our response you can lodge your grievance with SEBI at [SCORES](http://scores.gov.in) or you may also write to any of the offices of SEBI. SCORES may be accessed thorough SCORES mobile application as well, same can be downloaded from below [link](https://play.google.com/store/apps/details?id=com.ionicframework.sebi236330)
 
+---
+
+**SEBI Regional Office**
+
+SEBI (Southern Regional Office)
+7th Floor, 756-L,
+Anna Salai,
+Chennai - 600002, Tamil Nadu
+
+Tel: +91-44- 28880222 / 28526686
+Fax: +91-44 -28880333
+Fax: sebisro@sebi.gov.in
+
+[SEBI SCORES](https://www.scores.gov.in/scores/Welcome.html)
+
+**Principal Officer: Aditya G**
+SEBI REG No: INA200011736
 
 ---
 
@@ -274,10 +290,10 @@ Client’s queries / complaints may arise due to lack of understanding or a defi
 
 The purpose of this website is to provide information only and the contents of this website do not constitute financial advice.
 
-Aditya will endeavour to update the website on a regular basis. However, information can change without notice and I do not guarantee the accuracy of information on the website, including information provided by third parties, at any particular time.
+The Investment Adviser will endeavour to update the website on a regular basis. However, information can change without notice and I do not guarantee the accuracy of information on the website, including information provided by third parties, at any particular time.
 
 The information is selective and may not be complete or accurate for your particular purposes and should not be construed as a recommendation to invest in any particular product, investment or security. The information provided on this website is given in good faith and is believed to be accurate at the time of compilation.
 
-Aditya does not give any warranty as to the accuracy, reliability or completeness of information which is contained in this website. Except insofar as any liability under statute cannot be excluded, Aditya does not accept any liability for any error or omission of any information on this website or for any resulting loss or damage suffered by the recipient or any other person.
+The Investment Adviser does not give any warranty as to the accuracy, reliability or completeness of information which is contained in this website. Except insofar as any liability under statute cannot be excluded, the Investment Adviser does not accept any liability for any error or omission of any information on this website or for any resulting loss or damage suffered by the recipient or any other person.
 
-For your convenience, this website may contain hyperlinks to websites and servers maintained by third parties. Aditya does not control, evaluate, endorse or guarantee content found in those sites. Aditya does not assume any responsibility or liability for the actions, products, services and content of these sites or the parties that operate them. Your use of such sites is entirely at your own risk. Unless otherwise specified, copyright of information provided on this website is owned by Aditya. You may not alter or modify this information in any way.
+For your convenience, this website may contain hyperlinks to websites and servers maintained by third parties. The Investment Adviser does not control, evaluate, endorse or guarantee content found in those sites. Similarly, the Investment Adviser does not assume any responsibility or liability for the actions, products, services and content of these sites or the parties that operate them. Your use of such sites is entirely at your own risk.
